<resources>
    <string name="app_name">NGM DownLoader</string>
    <string name="prepare">Please allow read/write permission to save BGM.</string>
    <string name="ngm">NGM</string>
    <string name="downloader">Downloader</string>
    <string name="img_desc">Image!</string>
    <string name="search_hint">SongID here</string>
    <string name="search_text">검색검색검색검색검색검색</string>
    <string name="id_status_1">아이디부터 넣고 검색해 미친년아</string>
    <string name="id_status_2">아니 씨발 숫자넣으라고 쌍년아</string>
    <string name="download_failed">다운로드 실패: %s</string>
    <string name="download_success">다운로드 성공!\n-----------------------------\nTitle: %s\nID: %s\n-----------------------------\n파일경로: %s</string>
    <string name="more">More</string>
</resources>